@@ -1,8 +1,0 @@
-#ifndef COMPATIBILITY_HEADER_VJ_TIMER
-#define COMPATIBILITY_HEADER_VJ_TIMER
-
-#include <vrj/Util/Timer.h>
-
-typedef vrj::Timer vjTimer;
-
-#endif
